Fix: header z-index

--- a/src/components/ux/Header/style.module.scss
+++ b/src/components/ux/Header/style.module.scss
@@ -8,7 +8,7 @@
 
   &__navigation {
     position: fixed;
-    z-index: 100;
+    z-index: 1000;
 
     width: 100%;
 
